<?xml version="1.0" encoding="utf-8"?>
<menu

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:iconTint="#FFFFFF"
        android:title="@string/home"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_setup"
        android:icon="@drawable/ic_setup"
        android:iconTint="#FFFFFF"
        android:title="@string/setup"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:iconTint="#FFFFFF"
        android:title="@string/profile"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>