<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_bluetooth"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text"
                    android:imeOptions="actionSend"
                    android:inputType="text"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/send_button"
                    android:text="Send"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/Title"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_Title"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#243343"
                    android:hint="@string/Title"
                    android:textSize="@dimen/textSizeForm"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="#b6b5b5"
                    android:textCursorDrawable="@drawable/cursor_background" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/Internal_diameter"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_Internal_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#243343"
                    android:hint="@string/Internal_diameter"
                    android:textSize="@dimen/textSizeForm"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="#b6b5b5"
                    android:textCursorDrawable="@drawable/cursor_background" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/Number_of_terms"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_Number_of_terms"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#243343"
                    android:hint="@string/Number_of_terms"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/textSizeForm"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/HintColor"
                    android:textCursorDrawable="@drawable/cursor_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/Wire_diameter"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_Wire_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#243343"
                    android:hint="@string/Wire_diameter"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="#b6b5b5"
                    android:textSize="@dimen/textSizeForm"
                    android:maxLength="10"
                    android:textCursorDrawable="@drawable/cursor_background" />

                <!--Email-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/Start_wait_time"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_Start_wait_time"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#243343"
                    android:hint="@string/Start_wait_time"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSizeForm"
                    android:textColorHint="@color/HintColor"
                    android:textCursorDrawable="@drawable/cursor_background" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/Stop_wait_time"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_Stop_wait_time"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#243343"
                    android:hint="@string/Stop_wait_time"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/textSizeForm"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/HintColor"
                    android:textCursorDrawable="@drawable/cursor_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/Feed_speed"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_Feed_speed"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#243343"
                    android:hint="@string/Feed_speed"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="#b6b5b5"
                    android:textSize="@dimen/textSizeForm"
                    android:textCursorDrawable="@drawable/cursor_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/Die_Diameter"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_Die_Diameter"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="#243343"
                    android:hint="@string/Die_Diameter"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="#b6b5b5"
                    android:textSize="@dimen/textSizeForm"
                    android:textCursorDrawable="@drawable/cursor_background" />

                <LinearLayout
                    android:id="@+id/row3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_marginBottom="50dp"
                    android:background="@color/grey_5"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/btn_Cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_5"
                        android:background="@drawable/button"
                        android:text="@string/Cancel"
                        android:textColor="@color/colorWhite"
                        android:textSize="10dp" />

                    <Button
                        android:id="@+id/btn_Select_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_5"
                        android:background="@drawable/button"
                        android:text="@string/Select_setting"
                        android:textColor="@color/colorWhite"
                        android:textSize="10dp" />

                    <Button
                        android:id="@+id/btn_New_Save_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Save_setting"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/button"
                        android:layout_margin="@dimen/padding_5"
                        android:textSize="@dimen/padding_10"/>


                    <Button
                        android:id="@+id/btn_Send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Send"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/button"
                        android:layout_margin="@dimen/padding_5"
                        android:textSize="10dp"
                        />



                </LinearLayout>


            </LinearLayout>


            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chat_list_view"
                android:fastScrollEnabled="true"/>

            <include layout="@layout/empty_list_item" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
