<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <RelativeLayout
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTitleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/homepage"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/textExtraLargeSize"
            />

        <View
            android:id="@+id/viewNotification"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_logout"
            android:backgroundTint="@color/colorPrimary" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CB"
        android:textSize="12dp"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/grey_5"
        android:drawablePadding="5dp"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:textSize="14sp"
        android:text="CBROZ"
        android:textColor="@color/backgroundBlack"

        android:ellipsize = "marquee"
        android:fadingEdge = "horizontal"
        android:marqueeRepeatLimit = "marquee_forever"
        android:scrollHorizontally = "true"
        android:singleLine="true"


        />

    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"  >
                <TextView
                    android:id="@+id/tv_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Repeat_Mode"
                    android:textSize="20dp"
                    />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton"
                    android:layout_marginLeft="@dimen/padding_5"

                    />


            </LinearLayout>


        <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/ll_timetable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/padding_10">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_timetable"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="15dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/shape_timetable" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Stop"
                        android:gravity="center"
                        android:layout_below="@+id/iv_timetable"
                        android:textColor="@color/colorBlack"
                        android:textAlignment="center"
                        android:paddingTop="10dp"
                        android:layout_gravity="center_horizontal"

                        />

                </LinearLayout>



            </LinearLayout>



        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/grey_5"
            android:layout_marginTop="@dimen/padding_20">

            <Button
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Start"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button"
                android:layout_margin="@dimen/padding_5"/>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Send"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button"
                android:layout_margin="@dimen/padding_5"/>

            <Button
                android:id="@+id/btn_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button"
                android:layout_margin="@dimen/padding_5"/>


        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>